# cosmic-ext-applet-vitals

./: .gitignore  Cargo.toml  README.md  justfile
i18n/en/: cosmic_ext_applet_vitals.ftl  cosmic_vitals_applet.ftl
i18n/sv/: cosmic_ext_applet_vitals.ftl
res/: dev.eidolon.cosmic-ext-applet-vitals.desktop  dev.eidolon.cosmic-ext-applet-vitals.metainfo.xml  dev.eidolon.cosmic-vitals-applet.desktop  dev.eidolon.cosmic-vitals-applet.metainfo.xml
src/: app.rs  main.rs
src/configuration/: app_configuration.rs  cpu.rs  disk.rs  general.rs  memory.rs  mod.rs  network.rs  validation.rs
src/core/: app_colours.rs  app_configuration.rs  app_icons.rs  app_text_measurements.rs  cosmic_text_measurer.rs  memory_monitor.rs  mod.rs  proc_meminfo_reader.rs  ram_usage.rs  settings.rs
src/monitors/: cpu_monitor.rs  disk_monitor.rs  memory_monitor.rs  mod.rs  network_monitor.rs
src/sensors/: mod.rs  network_utilities.rs  proc_disk_stats_reader.rs  proc_meminfo_reader.rs  proc_net_dev_reader.rs  proc_stat_reader.rs  sensor_traits.rs
src/ui/: app_colours.rs  app_icons.rs  app_text_measurements.rs  color_util.rs  cosmic_text_measurer.rs  cpu_settings.rs  display_item.rs  icons.rs  indicators.rs  indicators_ui.rs  main_settings_form.rs  memory_settings.rs  mod.rs  settings.rs  settings_form.rs  settings_input_sanitisers.rs  ui.rs
src/ui/components/: form_checkbox_input.rs  form_text_input.rs  form_theme_colour_picker_input.rs  indicator.rs  indicator_label.rs  indicator_value.rs  mod.rs  no_indicator.rs  svg_icon.rs
src/ui/indicators/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs
src/ui/settings_forms/: main_settings_form.rs  mod.rs  settings_form.rs
