[package]
name = "cosmic-vitals-applet"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.80"

[dependencies]
i18n-embed-fl = "0.8"
rust-embed = "8.3.0"
once_cell = "1.21.3"
tokio = { version = "1.47.1", features = ["macros", "time"] }
async-stream = "0.3.6"
tokio-util = "0.7.16"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
indexmap = "2.11.4"
systemd-journal-logger = "2.2.2"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "wayland"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
